Modified PNG encoding approach with regards to opacity:
a. PNGTranscoder no longer forces fully transparent pixels to white.
   Instead, forcing white transparent pixel has become a transcoding
   hint option: PNGTranscoder.KEY_FORCE_TRANSPARENT_WHITE.

b. The svgbrowser retains its previous PNG Save As behavior and
   still forces transparent white on the images it exports.

c. The svgrasterizer now uses the new default PNGTranscoder
   behavior (*not* forcing transparent white). To get a white
   background, a '-bg' option has been added to the rasterizer
   which lets the user specify the desired background color.
   The default is fully opaque white background.

PR:
Obtained from:
Submitted by:
Reviewed by:


git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/batik/trunk@200159 13f79535-47bb-0310-9956-ffa450edef68